force-app/main/default/objects/Loan__c/fields/Annual_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate__c</fullName>
    <formula>Loan_Prime_Rate__c +  ( Spread_Basis_Points__c / 10000 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>