force-app/main/default/objects/Loan__c/fields/Current_Balance__c.field-meta.xml
<CustomField>
    <fullName>Current_Balance__c</fullName>
    <formula>Total_Loan_Amount__c  - IF(ISBLANK( Total_Repaid_Principal__c ), 0,  Total_Repaid_Principal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>