force-app/main/default/objects/Loan__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>ADDMONTHS( Start_Date__c , Total_Installments__c )</formula>
    <label>End Date</label>
    <type>Date</type>
</CustomField>