force-app/main/default/objects/Loan__c/fields/Loan_Prime_Rate__c.field-meta.xml
<CustomField>
    <fullName>Loan_Prime_Rate__c</fullName>
    <label>Loan Prime Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>