force-app/main/default/objects/Loan__c/fields/Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Loan_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>个人一手楼住房贷款</fullName>
            </value>
            <value>
                <fullName>个人二手楼住房贷款</fullName>
            </value>
            <value>
                <fullName>个人商业用房贷款</fullName>
            </value>
            <value>
                <fullName>住房公积金贷款 / 组合贷款</fullName>
            </value>
            <value>
                <fullName>个人消费贷款</fullName>
            </value>
            <value>
                <fullName>闪电贷</fullName>
            </value>
            <value>
                <fullName>个人汽车贷款</fullName>
            </value>
            <value>
                <fullName>e 招贷</fullName>
            </value>
            <value>
                <fullName>质押贷款</fullName>
            </value>
            <value>
                <fullName>个人经营贷款</fullName>
            </value>
            <value>
                <fullName>招捷贷</fullName>
            </value>
            <value>
                <fullName>周转易 / 消费易</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>