force-app/main/default/objects/Loan__c/fields/Remaining_Installments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Installments__c</fullName>
    <formula>Total_Installments__c  -  Total_Repaid_Installments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>