force-app/main/default/objects/Loan__c/fields/Repayment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Mode__c</fullName>
    <label>Repayment Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>等额本息(EMI)</fullName>
            </value>
            <value>
                <fullName>等额本金(EPP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>