force-app/main/default/objects/Loan__c/fields/Spread_Basis_Points__c.field-meta.xml
<CustomField>
    <fullName>Spread_Basis_Points__c</fullName>
    <label>Spread Basis Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>