force-app/main/default/objects/Loan__c/fields/Total_Installments__c.field-meta.xml
<CustomField>
    <fullName>Total_Installments__c</fullName>
    <label>Total Installments</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>