force-app/main/default/objects/Loan__c/fields/Total_Repaid_Installments__c.field-meta.xml
<CustomField>
    <fullName>Total_Repaid_Installments__c</fullName>
    <label>Total Repaid Installments</label>
    <summaryFilterItems>
        <field>Repayment_Record__c.Repayment_Status__c</field>
        <operation>equals</operation>
        <value>Success</value>
    </summaryFilterItems>
    <summaryForeignKey>Repayment_Record__c.Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>