force-app/main/default/objects/Loan__c/fields/Total_Repaid_Principal__c.field-meta.xml
<CustomField>
    <fullName>Total_Repaid_Principal__c</fullName>
    <label>Total Repaid Principal</label>
    <summarizedField>Repayment_Record__c.Principal_Repayment__c</summarizedField>
    <summaryForeignKey>Repayment_Record__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>